--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,22 @@
 {
-    "name": "litermi/elasticlog",
-    "description": "Elastic logging from monolog",
-    "type": "library",
-    "license": "MIT",
-    "require": {}
+  "name": "cirelramostrabajo/plogger",
+  "description": "A simple hello world composer package",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Cirel Ramos",
+      "email": "cirelramos@gmail.com"
+    }
+  ],
+  "support": {
+    "issues": "https://github.com/cirelramostrabajo/plogger/issues",
+    "source": "https://github.com/cirelramostrabajo/plogger"
+  },
+  "minimum-stability": "stable",
+  "autoload": {
+    "psr-4": {"Cirelramostrabajo\\Plogger\\": "src/"}
+  },
+  "require": {}
 }
+
